getFirst, getLast, removeFirst, removeLast removed